# CoVDeL

./: .gitignore  CMakeLists.txt  README.md
include/covdel/ma/: datatype.hh  dimension.hh  factory.hh  multiarray.hh
src/: CMakeLists.txt
src/ma/: CMakeLists.txt  dimension.cc  multiarray.cc
tests/: CMakeLists.txt  utils.hh
tests/ma/: test_dimension.cc  test_multiarray.cc
